tests/syntax_error/unnecessary_zero.jou
def main() -> int:
    # In C this would be 777 in octal (base 8).
    # IMO it is more confusing than helpful.
    #
    # Leading zeros are allowed in hex and binary numbers, because in those
    # numbers, the position is usually significant. Example:
    #
    #   FLAG_FOO = 0x01
    #   FLAG_BAR = 0x02
    #   FLAG_BAZ = 0x04
    #   FLAG_LOL = 0x10
    #
    very_good_perms = 0777  # Error: unnecessary zero at start of number
